// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFetch should handle "wait" 1`] = `
<div
  data-testid="content"
/>
`;

exports[`useFetch should handle hard failure 1`] = `
<p
  data-testid="failure"
>
  Error: Failed to fetch
</p>
`;

exports[`useFetch should handle soft failure 1`] = `
<p
  data-testid="failure"
>
  Error: Request failed
</p>
`;

exports[`useFetch should handle success 1`] = `
<p
  data-testid="running"
>
  Loading
</p>
`;

exports[`useFetch should handle success 2`] = `
<ul
  data-testid="success"
>
  <li>
    mojombo/grit
  </li>
  <li>
    wycats/merb-core
  </li>
  <li>
    rubinius/rubinius
  </li>
  <li>
    mojombo/god
  </li>
  <li>
    vanpelt/jsawesome
  </li>
  <li>
    wycats/jspec
  </li>
  <li>
    defunkt/exception_logger
  </li>
  <li>
    defunkt/ambition
  </li>
  <li>
    technoweenie/restful-authentication
  </li>
  <li>
    technoweenie/attachment_fu
  </li>
</ul>
`;
